fixed background issues on mobile, also added change Page logic

--- a/src/MyHobbies/MyHobbies.module.css
+++ b/src/MyHobbies/MyHobbies.module.css
@@ -17,14 +17,29 @@
     border: white solid 1px;
 }
 
+.mobileScroll {
+    display: none;
+}
+
 @media screen and (orientation: portrait) {
     .my-hobbies-container-inner {
         width: 80%;
+        padding-bottom: 1%;
     }
 
     .my-hobbies-container-inner p {
         font-size: 1.1rem;
     }
+
+    .my-hobbies-container-inner img {
+        width: 9%;
+        background-color: rgba(255,255,255,0.7);
+    }
+  .mobileScroll {
+    display: block;
+    float: right;
+    margin-right: -2.4%;
+  }  
 }
 
 @media screen and (min-height: 820px) and (orientation: portrait) {
